
= Changes for 6.2.13 (rXXXXX) - September XX, 2006

# Agent Zhang has reviewed r12962 ~ r13261
# (not including fglock's work)

== New Perl 6 modules



== Updated modules

* [ext/CGI/] - refactored to have an OO interface, and the ability to pass
  args to new() was added.
* [ext/HTTP-Server-Simple/] - switched from non-standard "./" syntax to 
  standard "self." syntax.
* [ext/Set-Relation/] - Renamed from ext/Relation/

== Perl 6 on Perl 5 (under [misc/pX/Common/])

* Added make_build_perl5, to make it possible to build all the perl5 modules
  without installing ghc first. 

XXX fglock: please write more here.

== Perl 5 to Perl 6 Translater (under [misc/pX/Common/P5_to_P6_Translation])

XXX Sage: please write something here.

==  Documentations

* added util/smartlinks.pl which implements the new generation of
  smartlinks used in the test suite. it generetes much nicer
  cross-referenced HTML pages than util/catalog_tests.pl.
  (See http://perlcabal.org/syn/S02.html for sample outputs.)
* A new documentation index was created, which is regularly
  published at http://perlcabal.org/syn and the synopses are
  updated automatically by util/smartlinks.pl every 1 hour.
* Perl6::Perl6::Differences was significantly updated. An HTML
  version of it is linked to from the page above.
* say() was officially added to the spec
* Converted Test.pm docs from kwid to POD as there are more tools
  and familiarity with POD now.

== Examples and the Test Suite

* Updated the smokeserver to join the smartlinking fun
** smoke client now uploads .yml as well as .html
** smoke server now render synopses using users' smoke results (see SYN links) 
* Added many more smartlinks to the test suite.
* Rewrote util/prove6 using Perl 5 so that it can now run everywhere.
  You can use this to run only a portion of the test suite or even a single
  file. Contrast with the general `prove` utility, `prove6` supports
  multiple Pugs backends and multiple Perl 6 implementations.