@@ -12,7 +12,7 @@ my Str $EMPTY_STR is readonly = q{};
 ###########################################################################
 ###########################################################################
 
-package Locale::KeyedText-1.73.0 {
+package Locale::KeyedText-1.73.1 {
     # Note: This given version applies to all of this file's packages.
 } # package Locale::KeyedText
 
@@ -379,7 +379,7 @@ Refer to user messages in programs by keys
 
 =head1 VERSION
 
-This document describes Locale::KeyedText version 1.73.0.
+This document describes Locale::KeyedText version 1.73.1.
 
 It also describes the same-number versions of Locale::KeyedText::Message
 ("Message") and Locale::KeyedText::Translator ("Translator").
