@@ -84,7 +84,7 @@ my Str %TEXT_STRINGS is readonly = (
 ###########################################################################
 ###########################################################################
 
-module Locale::KeyedText::L::en-1.0.1 {
+module Locale::KeyedText::L::en-1.0.2 {
     sub get_text_by_key (Str $msg_key!) returns Str {
         return %TEXT_STRINGS{$msg_key};
     }
@@ -104,7 +104,7 @@ Localization of Locale::KeyedText for English
 
 =head1 VERSION
 
-This document describes Locale::KeyedText::L::en version 1.0.1.
+This document describes Locale::KeyedText::L::en version 1.0.2.
 
 =head1 SYNOPSIS
 
