@@ -5,7 +5,7 @@ use lib '../..', '../../inc';
 use inc::Module::Install prefix => '../../inc';
 
 name       ('Rosetta');
-version    ('0.724.0'); # 'VERSION_FROM' => 'lib/Rosetta.pm'
+version    ('0.724.1'); # 'VERSION_FROM' => 'lib/Rosetta.pm'
 abstract   ('Rigorous database portability');
 author     ('Darren R. Duncan <perl@DarrenDuncan.net>');
 license    ('gpl');
