@@ -10,7 +10,7 @@ my Str %TEXT_STRINGS is readonly = (
 ###########################################################################
 ###########################################################################
 
-module Rosetta::Engine::Example::L::en-0.2.1 {
+module Rosetta::Engine::Example::L::en-0.2.2 {
     sub get_text_by_key (Str $msg_key!) returns Str {
         return %TEXT_STRINGS{$msg_key};
     }
@@ -30,7 +30,7 @@ Localization of Rosetta::Engine::Example for English
 
 =head1 VERSION
 
-This document describes Rosetta::Engine::Example::L::en version 0.2.1.
+This document describes Rosetta::Engine::Example::L::en version 0.2.2.
 
 =head1 SYNOPSIS
 
