@@ -13,7 +13,7 @@ my Str $EMPTY_STR is readonly = q{};
 ###########################################################################
 ###########################################################################
 
-module Rosetta::Shell-0.1.2 {
+module Rosetta::Shell-0.1.3 {
 
     # External packages used by the Rosetta::Shell module, that do export symbols:
     # (None Yet)
@@ -125,7 +125,7 @@ Interactive command shell for the Rosetta DBMS
 
 =head1 VERSION
 
-This document describes Rosetta::Shell version 0.1.2.
+This document describes Rosetta::Shell version 0.1.3.
 
 =head1 SYNOPSIS
 
