@@ -20,7 +20,7 @@ my Str %TEXT_STRINGS is readonly = (
 ###########################################################################
 ###########################################################################
 
-module Rosetta::Shell::L::en-0.1.1 {
+module Rosetta::Shell::L::en-0.1.2 {
     sub get_text_by_key (Str $msg_key!) returns Str {
         return %TEXT_STRINGS{$msg_key};
     }
@@ -40,7 +40,7 @@ Localization of Rosetta::Shell for English
 
 =head1 VERSION
 
-This document describes Rosetta::Shell::L::en version 0.1.1.
+This document describes Rosetta::Shell::L::en version 0.1.2.
 
 =head1 SYNOPSIS
 
